<resources>

    <string name="app_name">宠物</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">top_android_test</string>
    <string name="back_alert_msg">确定要中止授权操作吗？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="auth_loading">页面加载中,请稍候</string>
    <string name="auth_failed">使用淘宝账号登录失败，失败原因：</string>
    <string name="btn_uuid">uuid</string>
    <string name="asyncbtn">异步api</string>
    <string name="refreshbtn">刷新token</string>
    <string name="asyncrefreshbtn">异步刷新token</string>
    <string name="authbtn">授权</string>
    <string name="apibtn">同步api调用</string>
    <string name="asynctqlbtn">异步TQL</string>
    <string name="tqlbtn">同步TQL</string>
    <string name="showauth">显示已授权</string>
    <string name="commitbtn">确定</string>
    <string name="uploadbtn">上传图片</string>
    <string name="call_api">调用商品api例子</string>
    <string name="get_last_login_userid">获取上个登陆的userId</string>
    <string name="goto_wap">跳转到wap购物页面</string>
    <string name="hello">Taobao Authorize Web Page</string>
    <string name="gouwu">购物</string>
    <string name="jiaoliu">交流</string>
    <string name="shangtu">赏图</string>
    <string name="more">更多</string>
    <string name="chuxingyongpin">出行用品</string>
    <string name="gougoushipin">狗狗食品</string>
    <string name="gougouwanju">狗狗玩具</string>
    <string name="richangyongpin">日常用品</string>
    <string name="meirongqingjie">美容清洁</string>
    <string name="yingyangbaojian">营养保健</string>
    <string name="fuzhuangshipin">服装饰品</string>
    <string name="xiangquanpidai">项圈皮带</string>

    <!-- more items page -->
    <string name="switchAccount">切换账号</string>
    <string name="useHelp">使用指南</string>
    <string name="feedback">意见反馈</string>
    <string name="softwareUpdate">软件升级</string>
    <string name="aboutUs">关于我们</string>
    <string name="cityList">城市列表</string>
    <string name="setHeaderIcon">设置头像</string>
    <string name="map">地图</string>
    <string name="share">分享</string>

    <!-- 裁剪头像 -->
    <string name="running_face_detection">"请稍候..."</string>
    <string name="saving_image">"正在保存照片..."</string>
    <string name="multiface_crop_help">"轻点一张照片开始裁剪。"</string>
    <string name="crop_image">裁剪照片</string>

    <!-- 赏图上下拉列表 -->
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <!-- 更多页面字串 -->
    <string name="meirong">美容</string>
    <string name="yiyuan">医院</string>
    <string name="xiangqin">相亲</string>
    <string name="jiyang">寄养</string>
    <string name="tuoyun">托运</string>
    <string name="binzang">殡葬</string>
    <string name="xunlian">训练/学校</string>

    <string name="location1">正在定位，请稍等...</string>

</resources>