<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/title_frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <FrameLayout
        android:id="@+id/content_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_frag" />

    <RadioGroup
        android:id="@+id/footRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="3dip"
        android:paddingTop="3dip" >

        <RadioButton
            android:id="@+id/gouWu_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:checked="true"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/tab3"
            android:gravity="center"
            android:shadowColor="#000"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:text="@string/gouwu"
            android:textColor="@drawable/tab_text_color" />

        <RadioButton
            android:id="@+id/jiaoLiu_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/tab1"
            android:gravity="center"
            android:shadowColor="#000"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:text="@string/jiaoliu"
            android:textColor="@drawable/tab_text_color" />

        <RadioButton
            android:id="@+id/shangTu_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/tab2"
            android:gravity="center"
            android:shadowColor="#000"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:text="@string/shangtu"
            android:textColor="@drawable/tab_text_color" />

        <RadioButton
            android:id="@+id/more_radioBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/tab4"
            android:gravity="center"
            android:shadowColor="#000"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:text="@string/more"
            android:textColor="@drawable/tab_text_color" />
    </RadioGroup>

</RelativeLayout>